--- a/src/styles/layout/main.scss
+++ b/src/styles/layout/main.scss
@@ -1,5 +1,6 @@
 /* main.scss */
 @use "variables.scss" as *;
+@import './layout.scss';
 .main-content {
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* 3 columnas por defecto */
